--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,9 +5,11 @@
 
 body{
     background-color: black;
+    text-align: center;
 }
 
 canvas{
-    width: 600px;
-    height: 600px;
+    background-color:#290e61;
+    margin-top: 5%;
+    border-radius: 14px;
 }
